--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,15 +77,15 @@
         <div class="container">
         <div class="row align-items-center justify-content-between">
             <div>
-                <span class="navbar-brand mr-2 mb-0"><strong>Mundana</strong></span>
+                <span class="navbar-brand mr-2 mb-0"><strong>VietNews</strong></span>
                 <span>Copyright © <script>document.write(new Date().getFullYear())</script>.</span>
 
                 <!--  Github Repo Star Btn-->
-                <a class="text-dark ml-1" target="_blank" href="https://github.com/wowthemesnet/mundana-theme-jekyll"><i class="fab fa-github"></i> Fork on Github</a>
+                <a class="text-dark ml-1"><i class="fab fa-star"></i> Lời tin cậy</a>
 
             </div>
             <div>
-                Made with <a target="_blank" class="text-dark font-weight-bold" href="https://www.wowthemes.net/mundana-jekyll-theme/"> Mundana Jekyll Theme </a> by <a class="text-dark" target="_blank" href="https://www.wowthemes.net">WowThemes</a>.
+                Vietnam News <a class="text-dark font-weight-bold> Tin tức Việt Nam </a> by <a class="text-dark" target="_blank" href="https://viet-web.com">Viet Web</a>.
             </div>
         </div>
         </div>
