--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -4,14 +4,17 @@
 <a class="nav-link" href="{{site.baseurl}}/index.html">Trang chủ</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/authors-list.html">Authors</a>
+<a class="nav-link" href="{{site.baseurl}}/categories.html#thời%20sự">Thời sự</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/contact.html">Contact</a>
+<a class="nav-link" href="{{site.baseurl}}/categories.html#c%C3%B4ng%20ngh%E1%BB%87%20&%20khoa%20h%E1%BB%8Dc">Công nghệ & Khoa học</a>
 </li>
 <li class="nav-item">
-<a target="_blank" class="nav-link" href="https://www.wowthemes.net/themes/mundana-ghost/">Ghost</a>
+<a class="nav-link" href="{{site.baseurl}}/categories.html#kinh%20tế%20&%20kinh%20doanh">Kinh tế & Kinh doanh</a>
 </li>
 <li class="nav-item">
-<a target="_blank" class="nav-link" href="https://www.wowthemes.net/donate/">Buy me a coffee <i class="fa fa-coffee text-danger"></i></a>
+<a class="nav-link" href="{{site.baseurl}}/categories.html#phong%20cách%20sống">Phong cách sống</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="{{site.baseurl}}/categories.html#chuy%E1%BB%87n">Chuyện</a>
 </li>
