--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -7,7 +7,7 @@
 <a class="nav-link" href="{{site.baseurl}}/categories.html#c%C3%B4ng%20ngh%E1%BB%87%20&%20khoa%20h%E1%BB%8Dc">Công nghệ & Khoa học</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/categories.html#kinh%20tế%20&%20kinh%20doanh">Kinh tế & Kinh doanh</a>
+<a class="nav-link" href="{{site.baseurl}}/categories.html#kinh%20tế%20&%20kinh%20doanh">Kinh doanh</a>
 </li>
 <li class="nav-item">
 <a class="nav-link" href="{{site.baseurl}}/categories.html#phong%20cách%20sống">Phong cách sống</a>
